完成API登入/認證/refresh token 實作，並且確保refresh 只能用一次 並且將把 JWT 內使用者識別資訊(COMP_NO、STR_NO、PASS_NO) 三者封裝成共用元件，減少重複程式與錯字風險 還有其他功能+架構設置

--- a/INVwebAPI/efpt.config.json
+++ b/INVwebAPI/efpt.config.json
@@ -3,7 +3,7 @@
    "ContextClassName": "EINV_WEBContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
-   "IncludeConnectionString": true,
+   "IncludeConnectionString": false,
    "IrregularWords": null,
    "MinimumProductVersion": "2.6.1301",
    "ModelNamespace": null,
