新增APIPOST /api/INV/GetINVnumber POST /api/INV/UploadB2BDealData

--- a/INVwebAPI/efpt.config.json
+++ b/INVwebAPI/efpt.config.json
@@ -8,13 +8,13 @@
    "MinimumProductVersion": "2.6.1301",
    "ModelNamespace": null,
    "OutputContextPath": null,
-   "OutputPath": "D:\\Work\\apiTrunNew\\NewINVwebAPI\\INVwebAPI\\INVwebAPI\\Data\\Db",
+   "OutputPath": "D:\\Work\\apiTrunNew\\NewINVwebAPI\\INVwebAPI\\INVwebAPI\\Data\\Entities\\",
    "PluralRules": null,
    "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "INVwebAPI",
    "Schemas": null,
    "SelectedHandlebarsLanguage": 2,
-   "SelectedToBeGenerated": 1,
+   "SelectedToBeGenerated": 2,
    "SingularRules": null,
    "T4TemplatePath": null,
    "Tables": [
